--- a/dashboard/styles.css
+++ b/dashboard/styles.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #eff5ff;
+	background-color: #eff5ff !important;
 	font-family: 'Roboto', sans-serif;
 	padding: 1rem
 }
@@ -9,11 +9,6 @@ body {
 	height: 300px;
 	text-align: left !important;
 	overflow: scroll;
-}
-ul.navbar {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
 }
 a:hover {
 	text-decoration: none;
